modify get so error on first call to receiveMessage is returned as an error wrapped in a Flowable